--- a/flutter_shop/android/build.gradle
+++ b/flutter_shop/android/build.gradle
@@ -1,11 +1,8 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
-        // google()
-        // jcenter()
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+        google()
+        jcenter()
     }
 
     dependencies {
@@ -16,11 +13,8 @@ buildscript {
 
 allprojects {
     repositories {
-        // google()
-        // jcenter()
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+        google()
+        jcenter()
     }
 }
 
