--- a/flutter_shop/pubspec.yaml
+++ b/flutter_shop/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_screenutil: ^1.0.2
   # url_launcher: ^5.4.1
   flutter_easyrefresh: ^2.0.9
+  provide: ^1.0.2
 
 dev_dependencies:
   flutter_test:
