--- a/flutter_shop/pubspec.yaml
+++ b/flutter_shop/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # url_launcher: ^5.4.1
   flutter_easyrefresh: ^2.0.9
   provide: ^1.0.2
+  fluro: ^1.5.1
 
 dev_dependencies:
   flutter_test:
