--- a/flutter_shop/pubspec.yaml
+++ b/flutter_shop/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter_easyrefresh: ^2.0.9
   provide: ^1.0.2
   fluro: ^1.5.1
-
+  flutter_html: ^0.11.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
