--- a/flutter_shop/pubspec.yaml
+++ b/flutter_shop/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   provide: ^1.0.2
   fluro: ^1.5.1
   flutter_html: ^0.11.1
+  shared_preferences: ^0.5.6
+
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
