--- a/flutterNotebook/pubspec.yaml
+++ b/flutterNotebook/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   english_words: ^3.1.0
-
+  dio: ^2.0.9
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
